--- a/tcpclient.cfg
+++ b/tcpclient.cfg
@@ -1,8 +1,10 @@
+#第一個#為註解,排除#line按順序抓取資料,總計有效line *12,不可有空行會變空欄位
+#Line最後不可以有空白,沒有錯誤檢查.
 #IP
 192.168.0.124
 #port
 21087
-#TagWakeUpIntervalSec = 2 sec
+#LED display
 QSDM,2,DF300000AF,9,1,0100,QEDM
 QSDM,2,DF300000AF,9,1,0100,QEDM
 QSDM,2,EF300000BF,9,1,0100,QEDM
@@ -10,7 +12,16 @@ QSDM,2,EE300000BE,9,1,0100,QEDM
 QSDM,2,EF300000BF,9,1,0000,QEDM
 QSDM,2,F2300000C2,9,1,0100,QEDM
 QSDM,2,F3300000C3,9,1,0100,QEDM
+#TagWakeUpIntervalSec = 2 sec
 QSDM,2,DF300000AF,2,1,02000000,QEDM
 QSDM,2,EF300000BF,2,1,02000000,QEDM
-QSDM,2,DF300000AF,2,1,02000000,QEDM
+QSDM,2,DF300000AF,2,1,02000001,QEDM
+#超過 12 line 沒有作用,可視為備份資料,以後可以空行
 QSDM,2,EF300000BF,2,1,02000000,QEDM
+
+#Write NVM data.
+QSDM,2,0000000000,5,1,57300000278E0A0000010005F800FFFFA55A,QEDM
+QSDM,2,5730000027,5,1,57300000278E050000010005F800FFFFA55A,QEDM
+
+#RF_ACK_CMD_TEMPERATURE = 0x07
+QSDM,2,5730000027,7,1,0200FA00FFFF,QEDM
