--- a/UnityTcpClient/tcpclient-1.cfg
+++ b/UnityTcpClient/tcpclient-1.cfg
@@ -5,20 +5,20 @@
 #port
 21087
 #LED display
-QSDM,2,9830000068,9,1,0300,QEDM
-QSDM,2,DF300000AF,9,1,0100,QEDM
-QSDM,2,EF300000BF,9,1,0100,QEDM
-QSDM,2,EE300000BE,9,1,0100,QEDM
-QSDM,2,EF300000BF,9,1,0000,QEDM
-QSDM,2,F3300000C3,9,1,0100,QEDM
+QSDM,2,9530000065,9,1,0120,QEDM
+QSDM,2,9530000065,7,1,0200FA00FFFF,QEDM
+QSDM,2,9530000065,9,1,0505,QEDM
+QSDM,2,9530000065,9,1,0405,QEDM
+QSDM,2,9630000066,9,1,0505,QEDM
+QSDM,2,9630000066,9,1,0405,QEDM
 #RF_ACK_CMD_TxPower
 QSDM,2,F3300000C3,11,1,1700,QEDM
 #RF_ACK_CMD_RTC
 QSDM,2,F3300000C3,12,1,00000000,QEDM
 #TagWakeUpIntervalSec = 2 sec
 QSDM,2,F3300000C3,2,1,0A000000,QEDM
-QSDM,2,EF300000BF,2,1,02000000,QEDM
-QSDM,2,9830000068,2,1,02000000,QEDM
+QSDM,2,9530000065,2,1,02000001,QEDM
+QSDM,2,9630000066,2,1,02000001,QEDM
 #超過 12 line 沒有作用,可視為備份資料,以後可以空行
 QSDM,2,EF300000BF,2,1,02000000,QEDM
 
@@ -28,9 +28,15 @@ QSDM,2,5730000027,5,1,57300000278E050000010005F800FFFFA55A,QEDM
 
 #RF_ACK_CMD_TEMPERATURE = 0x07
 QSDM,2,5730000027,7,1,0200FA00FFFF,QEDM
-QSDM,2,D5300000A5,7,1,0200FA00FFFF,QEDM
+QSDM,2,9530000065,7,1,0200FA00FFFF,QEDM
 
 #define RF_ACK_CMD_REPDATA             0x0A
 QSDM,2,F3300000C3,10,1,00,QEDM
 QSDM,2,F3300000C3,10,1,01,QEDM
 QSDM,2,F3300000C3,10,1,02,QEDM
+
+#define RF_ACK_CMD_BATDET              0x0D
+QSDM,2,9630000066,13,1,020000,QEDM
+
+#define RF_ACK_CMD_TemperatureDET      0x0E
+QSDM,2,9630000066,9,1,0100,QEDM
