public void SendButtonGPIO(int index)

--- a/tcpclient-2.cfg
+++ b/tcpclient-2.cfg
@@ -8,10 +8,7 @@
 #21081
 #LED display
 #define RF_ACK_CMD_GPIO                0x09
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
+QSDM,2,9630000066,9,1,0120,QEDM
 #RF_ACK_CMD_TEMPERATURE = 0x07
 QSDM,2,9630000066,7,1,0200FA00FFFF,QEDM
 #QSDM,2,9630000066,9,1,0505,QEDM
