serverMessage = msg.text;  error.

--- a/TagidList.cfg
+++ b/TagidList.cfg
@@ -34,7 +34,7 @@ EA300000BA
 EB300000BB
 EC300000BC
 ED300000BD
-QSDM,2,9630000066,9,1,0120,QEDM
+QSDM,2,3130000001,9,1,0120,QEDM
 #RF_ACK_CMD_TEMPERATURE = 0x07
 QSDM,2,9630000066,7,1,0200FA00FFFF,QEDM
 #QSDM,2,9630000066,9,1,0505,QEDM
@@ -189,5 +189,17 @@ QSDM,2,9530000065,7,1,0200FA00FFFF,QEDM
 #define RF_ACK_CMD_RTC_RD                 0x8C
 #define RF_ACK_CMD_BATDET_RD              0x8D
 #define RF_ACK_CMD_TemperatureDET_RD      0x8E
+
+
+Write
+Request
+QSDM,2,[Tag ID],9,0,[GPIO 0],[GPIO 1],QEDM
+Response
+RSDM,2,[Response Code],[Tag ID],9,0,REDM
+Example
+QSDM,2,3130000001,9,0,1,0,QEDM
+
+RSDM,2,2100,3130000001,9,0,REDM
+
 
 
