public void listViewOnClick(Text msg)
public void getButtonClickMsg(string msg, int itemno)

--- a/tcpclient.cfg
+++ b/tcpclient.cfg
@@ -1,18 +1,23 @@
 #第一個#為註解,排除#line按順序抓取資料,總計有效line *12,不可有空行會變空欄位
 #Line最後不可以有空白,沒有錯誤檢查.
 #IP
-192.168.0.124
+#192.168.0.124
 #192.168.249.103
 #192.168.249.110
+192.168.249.107
 #port
 21087
 #21081
 #LED display
 #define RF_ACK_CMD_GPIO                0x09
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
-QSDM,2,{0},9,1,{1}80,QEDM
+QSDM,2,{0},9,0,{1},100,QEDM
+QSDM,2,{0},9,0,{1},100,QEDM
+QSDM,2,{0},9,0,{1},100,QEDM
+QSDM,2,{0},9,0,{1},100,QEDM
+#QSDM,2,{0},9,1,{1}80,QEDM
+#QSDM,2,{0},9,1,{1}80,QEDM
+#QSDM,2,{0},9,1,{1}80,QEDM
+#QSDM,2,{0},9,1,{1}80,QEDM
 #RF_ACK_CMD_TEMPERATURE = 0x07
 QSDM,2,9630000066,7,1,0200FA00FFFF,QEDM
 #QSDM,2,9630000066,9,1,0505,QEDM
