--- a/unityGPIO_Control/TagidList.cfg
+++ b/unityGPIO_Control/TagidList.cfg
@@ -34,7 +34,7 @@ E6300000B6
 E7300000B7
 E8300000B8
 E9300000B9
-
+END
 QSDM,2,3130000001,9,1,0120,QEDM
 #RF_ACK_CMD_TEMPERATURE = 0x07
 QSDM,2,9630000066,7,1,0200FA00FFFF,QEDM
