--- a/UnityTcpClient/TcpClientSocket_Data/boot.config
+++ b/UnityTcpClient/TcpClientSocket_Data/boot.config
@@ -1,3 +1,11 @@
+player-connection-mode=Listen
+player-connection-guid=2253587260
+player-connection-debug=1
+player-connection-project-name=TcpClientSocket
+player-connection-ip=192.168.249.103
+player-connection-ip=192.168.138.1
+player-connection-ip=192.168.234.1
 wait-for-native-debugger=0
+wait-for-managed-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
