MessageBox.Show() example.

--- a/UnityTcpClientT02/tcpclient_bat.cfg
+++ b/UnityTcpClientT02/tcpclient_bat.cfg
@@ -1,7 +1,7 @@
 #第一個#為註解,排除#line按順序抓取資料,總計有效line *12,不可有空行會變空欄位
 #Line最後不可以有空白,沒有錯誤檢查.
 #IP
-192.168.250.106
+192.168.250.103
 #192.168.249.107
 #port
 21087
@@ -9,21 +9,30 @@
 #QSDM,[Format Ver],[Tag ID],[Command Type],[OPTION],[Parameter 1],[Parameter 2],[Parameter 3],[Parameter 4],QEDM
 #Response
 #RSDM,[Format Ver],[Response Code],[Tag ID],[Command Type],[OPTION],[Response 1],[Response 2],[Response 3],[Response 4],REDM
-#define RF_ACK_CMD_RFCHN               0x21  = 33
-QSDM,2,D2300000A2,33,1,A801,QEDM
-QSDM,2,D6300000A6,33,1,A801,QEDM
-QSDM,2,D7300000A7,33,1,A801,QEDM
-QSDM,2,D8300000A8,33,1,A801,QEDM
-QSDM,2,D9300000A9,33,1,A801,QEDM
-QSDM,2,DA300000AA,33,1,A801,QEDM
-QSDM,2,DC300000AC,33,1,A801,QEDM
-QSDM,2,DD300000AD,33,1,A801,QEDM
-QSDM,2,DE300000AE,33,1,A801,QEDM
-QSDM,2,DF300000AF,33,1,A801,QEDM
-QSDM,2,EA300000BA,33,1,A801,QEDM
-QSDM,2,EB300000BB,33,1,A801,QEDM
-QSDM,2,EC300000BC,33,1,A801,QEDM
-QSDM,2,9830000068,33,1,A801,QEDM
+#define RF_ACK_CMD_BATDET              0x0D = 13
+QSDM,2,D2300000A2,13,1,5600,QEDM
+QSDM,2,D3300000A3,13,1,5600,QEDM
+QSDM,2,D4300000A4,13,1,5600,QEDM
+QSDM,2,D5300000A5,13,1,5600,QEDM
+QSDM,2,D6300000A6,13,1,5600,QEDM
+QSDM,2,D7300000A7,13,1,5600,QEDM
+QSDM,2,D8300000A8,13,1,5600,QEDM
+QSDM,2,D9300000A9,13,1,5600,QEDM
+QSDM,2,DA300000AA,13,1,5600,QEDM
+QSDM,2,DB300000AB,13,1,5600,QEDM
+QSDM,2,DC300000AC,13,1,5600,QEDM
+QSDM,2,DD300000AD,13,1,5600,QEDM
+QSDM,2,DE300000AE,13,1,5600,QEDM
+QSDM,2,DF300000AF,13,1,5600,QEDM
+QSDM,2,E5300000B5,13,1,5600,QEDM
+QSDM,2,E6300000B6,13,1,5600,QEDM
+QSDM,2,E7300000B7,13,1,5600,QEDM
+QSDM,2,E8300000B8,13,1,5600,QEDM
+QSDM,2,E9300000B9,13,1,5600,QEDM
+QSDM,2,EA300000BA,13,1,5600,QEDM
+QSDM,2,EB300000BB,13,1,5600,QEDM
+QSDM,2,EC300000BC,13,1,5600,QEDM
+QSDM,2,ED300000BD,13,1,5600,QEDM
 
 QSDM,2,3130000001,33,1,A201,QEDM
 QSDM,2,9630000066,33,1,A201,QEDM
